--- a/templates/admin.jinja2
+++ b/templates/admin.jinja2
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>LMR Admin Panel</title>
+    <title>Admin - Last Minute RoL</title>
 </head>
 <body>
 <h2>RoLs</h2>
