--- a/templates/index.jinja2
+++ b/templates/index.jinja2
@@ -1,20 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-  <meta charset="UTF-8">
-  <title>Last Minute RoL</title>
-
-  <link rel="stylesheet" type="text/css" href="/static/bower_components/semantic-ui/dist/semantic.css">
-  <link rel="stylesheet" type="text/css" href="/static/styles/main.css">
-  <script src="/static/bower_components/jquery/dist/jquery.js"></script>
-  <script src="/static/bower_components/semantic-ui/dist/semantic.js"></script>
-</head>
-<body>
-<!-- Following Menu -->
-<div class="ui large top fixed menu">
-  <a href="/" class="brand item">Last Minute RoL</a>
-</div>
-<div class="pusher">
+{% extends 'base.jinja2' %}
+{% block content %}
   <div class="ui vertical stripe segment">
     <div class="ui middle aligned stackable grid container">
       <div class="row">
@@ -24,7 +9,4 @@
       </div>
     </div>
   </div>
-</div>
-
-</body>
-</html>
+{% endblock %}
